<resources>
    <string name="app_name">Oho</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="sign_up_here"><u>Sign up here.</u></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_otp">Didn\'t receive OTP?</string>
    <string name="get_new"><u>Get a new one.</u></string>
    <string name="oho">Oho!</string>
    <string name="app_slogan">Dine in with your perfect Date!</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in"><u>Login</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="what_s_your_mobile_number">What\'s your mobile number?</string>
    <string name="dummy_mobile_number">+1-202-555-0191</string>
    <string name="who_do_you_identify_as">Who do you identify as?</string>
    <string name="what_s_your_date_of_birth">What\'s your date of birth?</string>
    <string name="dummy_height_feet">5\'</string>
    <string name="dummy_height_inch">11"</string>
    <string name="dummy_location">Fairfax, VA</string>
    <string-array name="religion_array">
        <item>Christianity</item>
        <item>Judaism</item>
        <item>Islam</item>
        <item>Hinduism</item>
        <item>Sikhism</item>
        <item>Agnosticism</item>
        <item>Atheism</item>
        <item>Buddhism</item>
        <item>Shintoism</item>
        <item>Spiritual</item>
        <item>Taoism</item>
        <item>Bahai</item>
        <item>Others</item>
    </string-array>
    <string-array name="race_array">
        <item>White</item>
        <item>Asian</item>
        <item>African American</item>
        <item>Black</item>
        <item>Hispanic</item>
        <item>Latinx</item>
        <item>Pacific Islander</item>
        <item>American Indian</item>
        <item>Others</item>
    </string-array>
</resources>