<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_curve_3"
        android:elevation="@dimen/_5sdp"/>
    <LinearLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_alignParentTop="true"
        android:elevation="@dimen/_5sdp">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oho"
            android:textSize="@dimen/_60ssp"
            android:textColor="@color/colorEndLinearGradient"
            android:fontFamily="@font/lovina_regular"
            android:layout_gravity="center" />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_slogan"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/black"
            android:fontFamily="@font/sf_pro_regular"
            android:layout_gravity="center"/>
    </LinearLayout>

    <!-- Email -->
    <LinearLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:elevation="@dimen/_5sdp"
        android:visibility="visible">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black"
            android:fontFamily="@font/sf_pro_regular"
            android:layout_marginStart="@dimen/_10sdp"
            android:textAllCaps="true"/>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_30sdp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:padding="@dimen/_5sdp"
                android:inputType="textEmailAddress"
                android:hint="abc@gmail.com"
                android:fontFamily="@font/sf_pro_regular"
                android:maxLines="1"
                android:textAllCaps="false"/>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_30sdp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_button"
                android:fontFamily="@font/sf_pro_regular"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:textAllCaps="true"
                android:padding="@dimen/_5sdp" />
        </com.google.android.material.card.MaterialCardView>
        <LinearLayout
            android:id="@+id/nav_to_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/black"
                android:fontFamily="@font/sf_pro_regular" />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/black"
                android:fontFamily="@font/sf_pro_heavy"
                android:layout_marginStart="@dimen/_5sdp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>