<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp">
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:background="@drawable/gradient_background"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_220sdp"
            android:orientation="vertical"
            android:background="@drawable/curve">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/email"
                app:boxCornerRadiusTopStart="@dimen/_30sdp"
                app:boxCornerRadiusTopEnd="@dimen/_30sdp"
                app:boxCornerRadiusBottomStart="@dimen/_30sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                app:boxStrokeWidth="1dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textinputedittext_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/email_ic"
                    android:drawableTint="@color/black"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/button_login_with_gmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_30sdp"
                android:elevation="@dimen/_10sdp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradient_button"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:padding="@dimen/_10sdp" />
            </com.google.android.material.card.MaterialCardView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_gravity="center">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/black" />
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_here"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/black"
                    android:layout_marginStart="@dimen/_2sdp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>